splash screen link setup

--- a/templates/countries/edit.html
+++ b/templates/countries/edit.html
@@ -261,7 +261,7 @@
             <option value="True" {% if country.visited==True %} selected {% endif %}>Yes</option>
             <option value="False" {% if country.visited==False %} selected {% endif %}>No</option>
         </select><br>
-        <input style="width: auto;" type="submit" value="Confirm">
+        <input class="button" style="width: auto;" type="submit" value="Confirm">
     </form>
 </div>
 <hr> {% endblock %}
