--- a/static/style.css
+++ b/static/style.css
@@ -104,11 +104,16 @@ button:active {
     text-align: left;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 .edit-country {
     text-align: center;
     padding-bottom: 10px;
+}
+
+.logo {
+    background-color: #047aed;
 }
 
 
