--- a/templates/home.html
+++ b/templates/home.html
@@ -9,9 +9,12 @@
     <title>VU App</title>
 </head>
 
-<body style="background-color: blue;">
-    <img src="../static/images/vu_logo_transparent.png" alt="vu_logo"> <br>
-    <a href="/profile">Click To Enter</a>
+<body>
+    <div class="logo">
+        <a href="/profile">
+            <img src="../static/images/vu_logo_transparent.png" alt="vu_logo"> <br>
+        </a>
+    </div>
 </body>
 
 </html>
