--- a/templates/vu_points/view.html
+++ b/templates/vu_points/view.html
@@ -6,7 +6,7 @@
     <section class="vu-vu-section">
         Name: {{ vu_point.name }} <br> Location: {{ vu_point.location.name }} <br> Rating: {{ vu_point.rating }} <br> Description: {{ vu_point.description }} <br> {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %} <br>
         <button class="button">
-            <a href="/countries-{{country.id}}/vu-points-{{vu_point.id}}/edit">Edit</a>
+            <a class="button" href="/countries-{{country.id}}/vu-points-{{vu_point.id}}/edit">Edit</a>
         </button>
     </section>
     <hr>
