--- a/templates/home.html
+++ b/templates/home.html
@@ -9,12 +9,13 @@
     <title>VU App</title>
 </head>
 
-<body>
+<body class="splash-body">
     <div class="logo">
         <a href="/profile">
             <img src="../static/images/vu_logo_transparent.png" alt="vu_logo"> <br>
         </a>
     </div>
+
 </body>
 
 </html>
