--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <header>
             <div class="navbar">
                 <div class="container flex">
-                    <img class="logo" style="width: 100px" src="../../static/images/vu_logo_transparent.png" alt="vu logo">
+                    <img style="width: 100px" src="../../static/images/vu_logo_transparent.png" alt="vu logo">
                     <nav>
                         <ul>
                             <li><a class="navbar-link" href="/profile">My Profile</a></li>
